--- a/source/stylesheets/theme/_intro.scss
+++ b/source/stylesheets/theme/_intro.scss
@@ -56,7 +56,7 @@ section.intro {
     @include media($large-screen-down) {
       font-size: 1em;
       line-height: 1.5;
-      margin: 1.5em 0 0 0;
+      margin: 3em 0 0 0;
     }
   }
 
